--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Under Construction</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello and Welcome to My Website</h1>
-    <p>Enjoy the white space as this is still a work in progress.</p>
+    <h1>We're Under Construction!</h1>
+    <p>Sorry for the inconvenience, but we're currently creating our website.<br>Please check back later.</p><br>In the meantime, you can contact us at <a href="mailto:support@russ-tek.com">support@russ-tek.com</a>
 </body>
 </html>
