--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body onload="fetchRandomImage()">>
+<body onload="fetchRandomImage()">
     <h1>We're Under Construction!</h1>
     <p>Sorry for the inconvenience, but we're currently creating our website.<br>Please check back later.</p><br>In the meantime, you can contact us at <a href="mailto:support@russ-tek.com">support@russ-tek.com</a>
     <br><br><br>
