--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
+            background-color: black;
+            color: white;
     </style>
 </head>
 <body onload="fetchRandomImage()">
