--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body onload="fetchRandomImage()">
     <h1>Website Under Construction</h1>
     <p>We are currently working on improving our website. Please check back later for updates.</p>
-    <p>In the meantime, you can contact us at <a href="mailto:info@example.com">info@example.com</a> or fill out our form by clicking on the toggle buttton. </p>
+    <p>In the meantime, you can contact us at <a href="mailto:support@russ-tek.com">support@russ-tek.com</a> or fill out our form by clicking on the toggle buttton. </p>
     <!-- Button to toggle between content -->
     <button onclick="toggleContent()">Toggle Content</button>
     <!-- Image element that will be populated with a random image -->
